<resources>
    <string name="app_name" translatable="false">PvPGN Chat</string>
    <string name="action_settings">Settings</string>
    <string name="send">Send</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="channel">Channel</string>
    <string name="remember">Remember me</string>
    <string name="exit">Exit</string>
    <string name="save">Save</string>
    <string name="email">Email</string>
    <string name="email_re">Email (Again)</string>

    <string-array name="actions_user">
        <item>Whois</item>
        <item>Finger</item>
        <item>Rat</item>
        <item>Sd</item>
        <item>Squelch</item>
        <item>Unsquelch</item>
    </string-array>
    <string-array name="actions_admin">
        <item>Kick</item>
        <item>Ban</item>
        <item>Mute</item>
        <item>Unmute</item>
        <item>Whois</item>
        <item>Finger</item>
        <item>Rat</item>
        <item>Sd</item>
        <item>Squelch</item>
        <item>Unsquelch</item>
    </string-array>

    <string name="alert_when_whisp_comes">Alert for incoming whisps</string>
    <string name="keep_wifi_on">Try to keep wifi on</string>
    <string name="num_of_chats">Number of messages on chat window</string>
    <string name="gateway">Gateway</string>
    <string name="x_users_in_channel">%1$d users in channel #%2$s</string>
    <string name="whispers">whispers</string>
    <string name="ANNOUNCEMENT">ANNOUNCEMENT</string>
    <string name="joining_channel">Joining Channel</string>
    <string name="you_whispered_to">You whispered to %1$s</string>
    <string name="INFO">INFO</string>
    <string name="ERROR">ERROR</string>
    <string name="emote_from">emote from %1$s</string>
    <string name="broken_connection">disconnected</string>
    <string name="no_connection">no connection</string>
    <string name="protocol_error">protocol error</string>
    <string name="wrong_password">wrong password or server reject</string>
    <string name="OK">OK</string>
    <string name="not_ready">Not Ready Yet</string>
    <string name="reconnect">Reconnect</string>
    <string name="disconnected">You were disconnected, reconnecting soon.</string>
    <string name="connect_now">Connect Now</string>
    <string name="chat_buffer">Chat Buffer</string>
    <string name="zero_infinity">0 Means Unlimited</string>

</resources>
