<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:maxHeight="100dp"
        android:maxWidth="300dp"
        android:src="@drawable/reconnect_border" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dp"
        android:contentDescription="@string/app_name"
        android:maxHeight="25dp"
        android:maxWidth="120dp"
        android:src="@drawable/reconnect_button" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_alignTop="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:background="@null"
        android:gravity="center"
        android:text="@string/connect_now" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageView2"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@null"
        android:gravity="center"
        android:text="@string/disconnected"
        android:textSize="12sp" />

</RelativeLayout>