<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <EditText
            android:id="@+id/mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="73dp"
            android:background="@drawable/input_border"
            android:ems="10"
            android:hint="@string/email"
            android:textColor="@color/channel_sender"
            android:textCursorDrawable="@null" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/mail2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/mail"
            android:layout_alignRight="@+id/mail"
            android:layout_below="@+id/mail"
            android:background="@drawable/input_border"
            android:ems="10"
            android:hint="@string/email_re"
            android:inputType="textPassword"
            android:textColor="@color/channel_sender"
            android:textCursorDrawable="@null" />

        <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:indeterminate="true"
            android:visibility="gone" />

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/mail"
            android:layout_alignRight="@+id/mail"
            android:layout_below="@+id/mail2"
            android:background="@drawable/ab_button"
            android:fitsSystemWindows="false"
            android:longClickable="true"
            android:text="@string/save"
            android:textColor="@color/channel_sender" />
    </RelativeLayout>

</ScrollView>